edge/dev.covidapihub.io.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev.covidapihub.io.ingress
  namespace: edge
  annotations:
    kubernetes.io/ingress.class: nginx-disease
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts: 
      - dev.covidapihub.io
      secretName: dev.covidapihub.io
  rules:
    - host: dev.covidapihub.io
      http:
        paths:
          - path: /
            backend:
              serviceName: edge
              servicePort: 8443
